Sign up/in google added

--- a/views/accountCreated.edge
+++ b/views/accountCreated.edge
@@ -11,6 +11,7 @@
         <div class="col-md-6 text-primary text-justify text-centert pt-5 pb-5">
             <h2>Account Created Successfully </h2>
             <br>
+            <h5>Please also check <b> Spam Email. </b> </h5>
             <h5>Please check you Email Inbox to activate your account.</h5>
             <h5>Web page redirects after 5 seconds.<br>
                 <script>
