--- a/views/profileUser.edge
+++ b/views/profileUser.edge
@@ -416,7 +416,7 @@ font-family:'play';
                                                 <img src="{{dt.image}}" width="80%" alt="">
                                         </div> 
                                 </div>
-                                <form action="inviteCustomDelete" class="mt-2" method="POST">
+                                <form action="greetingCustomDelete" class="mt-2" method="POST">
                                     <input type="hidden" name="_id" value="{{dt._id}}">
                                     <input type="submit" value="Delete" class="btn btn-danger col-10 offset-1 mt-1">
                                 </form>
